examples/landing-zone-v2/kubernetes/tier4/workload/helloweb-gateway.yaml
# Copyright 2021 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#########
# Provides a way to route HTTP requests. It connects the gateway frontend to the service
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: helloweb-route-sample
spec:
  hostnames:
    - "sample-workload.example.com"
  parentRefs:
    - name: sample-gateway
      namespace: gateway-infra
  rules:
    - backendRefs:
      - name: helloweb
        port: 8080
---
# Service is a named abstraction of software service (for example, mysql)
# consisting of local port (for example 3306) that the proxy listens on, and
# the selector that determines which pods will answer requests sent through
# the proxy
apiVersion: v1
kind: Service
metadata:
  name: helloweb
spec:
  ports:
    - port: 8080
      name: http
      targetPort: 8080
  selector:
    app: hello
    tier: web
